...
        ToggleSection(
            labelText = stringResource(R.string.data_view_configuration),
            visibleState = isEditing,
            onToggle = { expanded ->
                if (!expanded) onResetEditStateToSaved()
            },
            headerTestTag = "data_view_configuration_header",
            content = {}
        )
    }
    if (!isEditing.value) return

    scope.item {
...
